tests/snapshots/report_snapshots__table_formatter_empty.snap
---
source: tests/report_snapshots.rs
expression: TableFormatter.format(&empty)
---
Function: (wasm upload)
Network: mainnet (ledger 0)
WASM hash:  0000000000000000
WASM size:  0 bytes
Sections:   0 (custom: none)

+------------------+----------+---------------+
| Resource         | Consumed | Fee (stroops) |
+=============================================+
| CPU Instructions | 0        |               |
|------------------+----------+---------------|
| Memory Bytes     | 0        |               |
|------------------+----------+---------------|
| Read Entries     | 0        |               |
|------------------+----------+---------------|
| Write Entries    | 0        |               |
|------------------+----------+---------------|
| Read Bytes       | 0        |               |
|------------------+----------+---------------|
| Write Bytes      | 0        |               |
|------------------+----------+---------------|
| Transaction Size | 0        |               |
+------------------+----------+---------------+

Fee Breakdown:
  Non-refundable: 0 stroops (0.0%)
  Refundable:     0 stroops (0.0%)

  Components (of non-refundable):
    CPU:        0 stroops (0.0%)
    Storage:    0 stroops (0.0%)
    Bandwidth:  0 stroops (0.0%)

  Total:          0 stroops (0.0000000)
